<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpcionesActivity">

    <!-- LINEAS VERTICALES -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideStart_1"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.1"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideEnd_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"
        />

    <!-- LINEAS HORIZONTAL -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideTop_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideBottom_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideBottom_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"
        />

    <!-- CONTENIDO -->

    <TextView
        android:id="@+id/txtTituloEditor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/msg_TituloOpciones"
        android:textSize="18sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@+id/guideTop_1"
        app:layout_constraintEnd_toStartOf="@+id/guideEnd_1"
        app:layout_constraintStart_toStartOf="@+id/guideStart_1"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/txtMensage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/teal"
        android:textColor="@color/white"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/guideBottom_2"
        app:layout_constraintEnd_toStartOf="@+id/guideEnd_1"
        app:layout_constraintStart_toStartOf="@+id/guideStart_1"
        app:layout_constraintTop_toTopOf="@+id/guideTop_1"
        app:layout_constraintVertical_bias="0.05"
        />

    <Button
        android:id="@+id/btnCompartirCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_btnCompartirCorreo"

        app:layout_constraintBottom_toTopOf="@+id/guideBottom_1"
        app:layout_constraintStart_toStartOf="@+id/guideStart_1"
        app:layout_constraintTop_toTopOf="@+id/guideBottom_2"
        app:layout_constraintEnd_toStartOf="@+id/btnEditar"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:text="@string/msg_btnEditar"

        app:layout_constraintBottom_toTopOf="@+id/guideBottom_1"
        app:layout_constraintEnd_toStartOf="@+id/guideEnd_1"
        app:layout_constraintStart_toEndOf="@+id/btnCompartirCorreo"
        app:layout_constraintTop_toTopOf="@+id/guideBottom_2"
        app:layout_constraintVertical_bias="0.1" />

</androidx.constraintlayout.widget.ConstraintLayout>